# msa-perf-lab

./: .gitignore  README.md  docker-compose.yml  prometheus.yml
proto/: service.proto
services/flask-gateway/: Dockerfile  app.py  config.py  model.py  pyproject.toml  route.py  seed.py
services/flask-gateway/configs/: config.py
services/flask-gateway/db_seed/: seed.py  seed_users.py
services/flask-gateway/models/: user.py
services/flask-gateway/proto/: service.proto  service_pb2.py  service_pb2_grpc.py
services/flask-gateway/repositories/: redis_cache_repository.py
services/flask-gateway/routes/: __init__.py  external_route.py  route.py
services/flask-gateway/routes/external_grpc/: cpu_heavy_route.py  ping_route_grpc.py
services/flask-gateway/routes/external_rest/: mq_async_route.py  ping_route_rest.py  redis_cache_route.py
services/flask-gateway/routes/internal/: cpu_heavy_route.py  user_route_internal.py
services/flask-gateway/services/: go_service.py
services/flask-gateway/services/external_grpc/: cpu_heavy_service.py  ping_service_grpc.py
services/flask-gateway/services/external_rest/: mq_async_service.py  ping_service_rest.py  redis_cache_service.py
services/flask-gateway/services/internal/: cpu_heavy_service.py
services/flask-gateway/utils/: cpu_heavy.py  prometheus_metrics.py  rabbitmq_client.py  redis_client.py  rest_vs_grpc.py
services/go-core/: go.mod  main.go
services/go-core/handler/: ping.go
services/go-core/router/: ping.go
services/gocore/: Dockerfile  go.mod  go.sum  main.go
tests/: docker-compose.influx.yml
(+38 files in other folders)
